Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <h1>
 <a id="twitter-ads-api" class="anchor" href="#twitter-ads-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Twitter Ads API</h1>
 
+<p><a href="https://travis-ci.org/FallenTech/twitter-ads"><img src="https://travis-ci.org/FallenTech/twitter-ads.png?branch=master" alt="Build Status"></a>
+<a href="https://www.versioneye.com/user/projects/56338d8f36d0ab0021001a8d"><img src="https://www.versioneye.com/user/projects/56338d8f36d0ab0021001a8d/badge.svg?style=flat" alt="Dependency Status"></a>
+<a href="http://badge.fury.io/js/twitter-ads"><img src="https://badge.fury.io/js/twitter-ads.png" alt="NPM version"></a></p>
+
+<p><a href="https://www.npmjs.org/package/twitter-ads"><img src="https://nodei.co/npm/twitter-ads.png?downloads=true" alt="NPM stats"></a></p>
+
 <p>A simple wrapper for <a href="https://dev.twitter.com/ads/overview">Twitter Ads API</a> in Javascript.</p>
 
 <h2>
@@ -67,7 +73,8 @@ T.get(<span class="pl-s"><span class="pl-pds">'</span>accounts/:account_id<span 
 <span class="pl-c">  */</span>
 });
 
-<span class="pl-c">// You can use T.get, T.post, T.put and T.delete to make different calls available on the Twitter docs.</span></pre></div>
+<span class="pl-c">/* Use T.get, T.post, T.put and T.delete</span>
+<span class="pl-c">   refer to Twitter API docs for the call details. */</span></pre></div>
 
 <h2>
 <a id="additional-configurables" class="anchor" href="#additional-configurables" aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional Configurables</h2>
