Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 T.get(<span class="pl-s"><span class="pl-pds">'</span>accounts/:account_id<span class="pl-pds">'</span></span>, {account_id<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>XXX<span class="pl-pds">'</span></span>}, <span class="pl-k">function</span>(<span class="pl-smi">error</span>, <span class="pl-smi">resp</span>, <span class="pl-smi">body</span>) {
   <span class="pl-k">if</span> (e) <span class="pl-k">return</span> <span class="pl-en">console</span>.<span class="pl-c1">error</span>(e);
   <span class="pl-en">console</span>.<span class="pl-c1">log</span>(b);
-  <span class="pl-c">/* If everything goes okay, you should get something similar to this in your console.</span>
+  <span class="pl-c">/* If everything goes okay,</span>
+<span class="pl-c">  you should get something similar to this:</span>
+<span class="pl-c"></span>
 <span class="pl-c">    {</span>
 <span class="pl-c">      data: {</span>
 <span class="pl-c">        approval_status: "ACCEPTED",</span>
@@ -69,8 +71,9 @@ T.get(<span class="pl-s"><span class="pl-pds">'</span>accounts/:account_id<span 
 <span class="pl-c">          account_id: "hkkd"</span>
 <span class="pl-c">        }</span>
 <span class="pl-c">      }</span>
-<span class="pl-c">    }</span>
+<span class="pl-c">    }  </span>
 <span class="pl-c">  */</span>
+
 });
 
 <span class="pl-c">/* Use T.get, T.post, T.put and T.delete</span>
